# sandbox

./: .gitignore
bash/: check_cpu_virtualization.sh  curl_examples.sh  fizbuzz.sh
cpp/: CMakeLists.txt  candies.cpp  container_value_type.cpp  count_ones.cpp  countdowns.cpp  cross_prod.cpp  crtp.cpp  dungeon_generator.cpp  fib.cpp  float_compare.cpp  fork.c  functions_as_args.cpp  heap.cpp  hello.cpp  hello_world.cpp  inheritance.cpp  inheritance2.cpp  inheritance3.cpp  is_prime.cpp  lambda.cpp  map_points.cpp  my_move.cpp  my_string.cpp  nums_generator.cpp  operator_new.cpp  overload_pattern.cpp  perfect_squares.cpp  primes_iterator.cpp  print_float.cpp  print_type.cpp  process_mem.cpp  quine.c  release_object.cpp  scratch.cpp  stable_wall.cpp  stack_heap.cpp  system_mem.cpp  template_fib.cpp  template_programming.cpp  template_type_args.cpp  (+6 more)
e-olymp/: problem1.py
e-olymp/problem1012/: coins.py  coins1.py  coins2.py  coins3.py  coins4.py  coins5.py  coins6.py  coins7.py  coins8.cpp  coins_berendeev.py  gen_test.py  run_tests.sh
e-olymp/problem4056/: smooth_numbers.py
java/: truncate_lines.sh
java/src/: TruncateLines.java
js/: hello.html  hello.js  hello_node.js
js/redux/: core_concepts.js  package.json  redux_basic.js  redux_overview.js
python/: comb.py  generate_primes.py  get_tweets.py  hello_flask.py  linspace.py  quine.py  reverse_linked_list.py  smiles.py  table.py  tocode.py  truncate_lines.py  weights.py
swift/: concurrency.swift  error_handling.swift  generics.swift  hello.swift  protocols.swift  roman.swift  swap.swift  truncate_lines.swift
(+8 files in other folders)
